replaced image w compressed jpg. Added z-index to button css to fix visibility bug

--- a/src/styles/FirstSection.css
+++ b/src/styles/FirstSection.css
@@ -12,6 +12,7 @@
   left: 40%;
   top: 70%;
   opacity: 70%;
+  z-index: 999;
 }
 .caption {
   display: none;
